--- a/css/style.css
+++ b/css/style.css
@@ -449,15 +449,15 @@ body {
   vertical-align: middle;
   color: yellow;
 }
-#page .leftColumn .mult #bananaGrappe {
-  cursor: pointer;
+#page .leftColumn .mult .bananaGrappe {
   position: relative;
   width: 130px;
   height: 110px;
+  z-index: 8;
   top: -250px;
   left: 100px;
 }
-#page .leftColumn .mult #bananaGrappe .multBanana3 {
+#page .leftColumn .mult .bananaGrappe .multBanana3 {
   position: absolute;
   height: 110px;
   top: 2%;
@@ -465,7 +465,7 @@ body {
   z-index: 4;
   transform: rotate(10deg);
 }
-#page .leftColumn .mult #bananaGrappe .multBanana2 {
+#page .leftColumn .mult .bananaGrappe .multBanana2 {
   position: absolute;
   height: 110px;
   top: 0%;
@@ -473,7 +473,7 @@ body {
   z-index: 4;
   transform: rotate(30deg);
 }
-#page .leftColumn .mult #bananaGrappe .multBanana1 {
+#page .leftColumn .mult .bananaGrappe .multBanana1 {
   position: absolute;
   height: 110px;
   top: -4%;
@@ -575,6 +575,10 @@ body {
   height: 80px;
   width: 3px;
   background-image: repeating-linear-gradient(-40deg, black 0%, black 5%, #523106 5%, #9c590c 10%);
+}
+
+.pointer {
+  cursor: pointer;
 }
 
 .grayOut {
